--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ theme: jekyll-theme-minimal
 title: Prateek Narendra
 description: Hey there! That's me at DUMBO, New York, NY. I'm a Masters in Computer Science student at Stony Brook University.
 logo: imgs/profilepic.jpg
+google_analytics: UA-155874031-1
